Switch CI from codeclimate to qlty

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,22 +6,19 @@ steps:
   - name: Test Python
     image: python:3.13-slim-bookworm
     commands:
-      - apt-get update && apt-get install -y curl git
+      - apt-get update && apt-get install -y curl git xz-utils
+      - curl https://qlty.sh | sh
       - ln -fs .env.development .env
       - pip install -e .[test]
-      - curl -L "https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-$(dpkg --print-architecture)" > "${HOME}/bin/cc-test-reporter"
-      - chmod +x "${HOME}/bin/cc-test-reporter"
       - ruff check .
       - gunicorn -c config/gunicorn.conf.py --check-config
       - mypy .
-      - cc-test-reporter before-build
       - coverage run -m unittest discover
-      - exitcode="$?"
       - coverage report -m
-      - coverage xml -i
-      - cc-test-reporter after-build --exit-code "$exitcode"
+      - coverage lcov -o .coverage.lcov
+      - ~/.qlty/bin/qlty coverage publish .coverage.lcov --override-commit-sha "$DRONE_COMMIT_SHA" --override-branch "$DRONE_BRANCH" --override-build-id "$DRONE_BUILD_NUMBER"
     environment:
-      CC_TEST_REPORTER_ID: e42a05bff9c04dc4688b42419421a047b4d9c943f1734bc2f3180a7d2dae8f4f
+      QLTY_COVERAGE_TOKEN: qltcp_H4WBJvVbH8saIgr1
 
   - name: Test Node
     image: satantime/puppeteer-node:24-bookworm-slim
