Update qlty token

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
       - coverage lcov -o .coverage.lcov
       - ~/.qlty/bin/qlty coverage publish .coverage.lcov --override-commit-sha "$DRONE_COMMIT_SHA" --override-branch "$DRONE_BRANCH" --override-build-id "$DRONE_BUILD_NUMBER"
     environment:
-      QLTY_COVERAGE_TOKEN: qltcp_H4WBJvVbH8saIgr1
+      QLTY_COVERAGE_TOKEN: qltcp_eEGvDqcxehmg73W8
 
   - name: Test Node
     image: satantime/puppeteer-node:24-bookworm-slim
