--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: test
 
 steps:
   - name: Test Python
-    image: python:3.13-slim-bookworm
+    image: python:3.13-slim-trixie
     commands:
       - apt-get update && apt-get install -y curl git xz-utils
       - curl https://qlty.sh | sh
@@ -90,7 +90,7 @@ type: docker
 name: refresh-varsnap-production-snaps
 steps:
   - name: Refresh Varsnap Python Production Snaps
-    image: python:3.13-slim-bookworm
+    image: python:3.13-slim-trixie
     commands:
       - ln -fs .env.development .env
       - pip install -e .[test]
