Fix HOSTNAME usage

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 ENV=production
 DEBUG=false
-SERVER_NAME='www.$HOSTNAME'
+SERVER_NAME='$HOSTNAME'
 
 ROLLBAR_SERVER_TOKEN=$ROLLBAR_SERVER_TOKEN
 ROLLBAR_CLIENT_TOKEN=$ROLLBAR_CLIENT_TOKEN
